--- a/bakingPage/baking.css
+++ b/bakingPage/baking.css
@@ -1,227 +1,190 @@
 body {
-  margin: 0px; 
-  font-family: 'Neucha';
+    margin: 0px; 
+    font-family: 'Neucha';
+    background-color: #DED8CD;
 }
 
 .cover {
-  margin: 0;
+    margin: 0;
 }
 
 .coverimage {
-  position: relative;
+    position: relative;
 }
 
 .coverimage h1 {
-  z-index: 5;
-  font-size: 60px;
-  font-family: 'Montez';
-  margin: 0;
-  padding: 10px;
-  text-align: center; 
-  background-color: #2CCCC3; 
-  border-bottom: 3px solid #FACD3D;
-  position: relative;
+    z-index: 5;
+    font-size: 60px;
+    font-family: "Montez";
+    height: 90px;
+    margin: 0;
+    text-align: center;
+    border-bottom: 3px solid #DB9A7D;
+    position: relative;
 }
 
 .coverimage img {
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  opacity: 0.7;
-}
-
-.container {
-  position: relative;
-  display: inline;
-}
-
-.start {
-  position: absolute;
-  bottom: 10vh;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.6);
-  color: white;
-  width: 20%;
-  padding: 10px;
-  border-radius: 20px;
-  border: 2px solid #E60576;
-  font-size: 25px;
-  font-family: "Neucha";
-  box-shadow: 0 2px 4px 0 black,0 2px 10px 0 black !important;
-}
-
-.start:hover {
-  background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+    width: 100vw;
+    height: calc(100vh - 90px);
+    margin: 0;
+    opacity: 0.7;
 }
 
 button:focus { 
-  outline: none; 
+    outline: none; 
 }
 
 a {
-  color:  #E60576;
-  text-decoration: none;
-}
-
-.background2 {
-  background-color: #FACD3D;
-  margin: 19px 50px;
-  border: 2px dashed #E60576;
-}
-
-.background1 {
-  background-image: url("./imgbk.jpg");
-  position: absolute;
+    color: #634F40;
+    text-decoration: none;
 }
 
 .parent {
-  margin-bottom: 20px; 
+    border-radius: 20px;
+    margin-bottom: 20px;
+    background-color: #CEBDA5;
 }
 
 .block {
-  height: 100%;
-  padding: 20px 20px 0 20px
+    height: 100%;
+    padding: 0px 40px;
 }
 
 .directions {
-  border: 5px double #2CCCC3;
-  background-color: #ffffffe0;
-  padding: 10px; 
-  margin: 50px 40px;
-  font-size: 27px;
-  text-align: center;
+    border: 6px double #DB9A7D;
+    background-color: #DED8CD;
+    padding: 10px; 
+    margin: 40px;
+    font-size: 27px;
+    text-align: center;
+}
+
+button {
+    border-radius: 20px;
+    background-color: #CEBDA5;
 }
 
 button, .dropdown {
-  height: 65px;
-  border: 2px solid #5626C4;
-  background-color: white; 
-  width: 100%;
-  cursor: pointer;
+    height: 65px;
+    border: none;
+    width: 100%;
+    cursor: pointer;
 }
 
 .dropdown {
-  width: 99.6%;
-  height: 600px;
-  display: none;
-  border-top: transparent; 
-  overflow: hidden;
-  overflow: scroll;
+    height: 600px;
+    display: none;
+    border-top: transparent; 
+    overflow: hidden;
+    overflow: scroll;
 }
 
 .title {
-  font-size: 30px;
-  margin: 10px;
-  font-family: "Neucha";
+    font-size: 30px;
+    margin: 10px;
+    font-family: "Neucha";
 }
 
 img {
-  margin: 14px 29px;
+    margin: 14px 29px;
 }
 
 #cupcakepic {
-  filter: brightness(145%);
+    filter: brightness(145%);
 }
 
 #creampuffpic {
-  filter: brightness(90%);
+    filter: brightness(90%);
 }
 
 .images {
-  color: white;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .centering {
-  left: 14.5%;
+    left: 14.5%;
 }
 
 .center {
-  left: 29.5%;
+    left: 29.5%;
 }
 
 .pastry {
-  background-repeat: no-repeat;
-  background-size: 280px;
-  height: 185px;
-  width: 265px;
-  margin: 2%;
+    background-repeat: no-repeat;
+    background-size: 280px;
+    height: 185px;
+    width: 265px;
+    margin: 2%;
 }
 
 .image1 {
-  background-image: url("./pastry/cookie.jpg");
+    background-image: url("./pastry/cookie.jpg");
 }
 
 .image2 {
-  background-image: url("./pastry/pb.jpg");
+    background-image: url("./pastry/pb.jpg");
 }
 
 .image3 {
-  background-image: url("./pastry/shortbread.JPG");
+    background-image: url("./pastry/shortbread.JPG");
 }
 
 .image4 {
-  background-image: url("./pastry/cake.jpg");
+    background-image: url("./pastry/cake.jpg");
 }
 
 .image5 {
-  background-image: url("./pastry/reinedesaba.JPG");
+    background-image: url("./pastry/reinedesaba.JPG");
 }
 
 .image6 {
-  background-image: url("./pastry/cc.png");
+    background-image: url("./pastry/cc.png");
 }
 
 .image7 {
-  background-image: url("./pastry/brownies.jpg");
+    background-image: url("./pastry/brownies.jpg");
 }
 
 .image8 {
-  background-image: url("./pastry/blondeb.JPG");
+    background-image: url("./pastry/blondeb.JPG");
 }
 
 .image9 {
-  background-image: url("./pastry/bbtm.jpg");
+    background-image: url("./pastry/bbtm.jpg");
 }
 
 .image10 {
-  background-image: url("./pastry/ccm.jpg");
+    background-image: url("./pastry/ccm.jpg");
 }
 
 .image11 {
-  background-image: url("./pastry/bbs.png"); 
+    background-image: url("./pastry/bbs.png"); 
 }
 
 .image12 {
-  background-image: url("./pastry/creampuffs.jpg"); 
+    background-image: url("./pastry/creampuffs.jpg"); 
 }
 
 .txt {
-  position: relative;
-  top: 146px;
-  background: #000000ad;
-  width: 92.4%;
-  padding: 10px;
-  font-size: 17px;
+    position: relative;
+    top: 146px;
+    background: #000000ad;
+    width: 92.4%;
+    padding: 10px;
+    font-size: 17px;
 }
 
 .maintxt {
-  margin: 10px 40px;
-  font-size: 25px;
-}
-
-hr {
-  border: 3px solid #FACD3D; 
-  margin: 0;
+    margin: 10px 40px;
+    font-size: 25px;
 }
 
 footer {
-  padding: 10px; 
-  text-align: center;
-  background: #2CCCC3;
+    margin: 40px 0px 10px;
+    text-align: center;
 }
