update baking image jpg to JPG

--- a/bakingPage/baking.css
+++ b/bakingPage/baking.css
@@ -135,7 +135,7 @@ img {
 }
 
 .image4 {
-    background-image: url("./pastry/cake.jpg");
+    background-image: url("./pastry/cake.JPG");
 }
 
 .image5 {
@@ -155,11 +155,11 @@ img {
 }
 
 .image9 {
-    background-image: url("./pastry/bbtm.jpg");
+    background-image: url("./pastry/bbtm.JPG");
 }
 
 .image10 {
-    background-image: url("./pastry/ccm.jpg");
+    background-image: url("./pastry/ccm.JPG");
 }
 
 .image11 {
