--- a/mywebsite.css
+++ b/mywebsite.css
@@ -1,37 +1,40 @@
 /* @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"); */
 
-@media only screen and (max-width: 550px) {
-    nav {
-        justify-content: center !important;
-    }
-
+@media only screen and (max-width: 700px) {
     .homeContainer {
         padding-top: 100px !important;
     }
 
-    .boxProjects {
-        height: 340px !important;
+    .aboutMeDetails,
+    .projectHeader {
+        flex-direction: column;
     }
 
-    .aboutMeContents {
-        flex-wrap: wrap;
+    #standardMenu {
+        display: none;
+    }
+
+    #smallMenu {
+        display: block !important;
     }
 }
 
 :root {
     --color-text: black;
-    --color-background: #FAFAFA;
-    --color-panel: #F3F3F3;
-    --color-button: #F3F3F3;
-    --color-button-hover: #D9D9D9;
+    --color-background: #fafafa;
+    --color-panel: #f3f3f3;
+    --color-button: #f3f3f3;
+    --color-button-hover: #d9d9d9;
+    --color-menu: #ebebeb;
 }
 
 [data-theme="dark"] {
     --color-text: white;
-    --color-background: #0E2741;
-    --color-panel: #112E4E;
-    --color-button: #0E2741;
+    --color-background: #0e2741;
+    --color-panel: #112e4e;
+    --color-button: #112e4e;
     --color-button-hover: #194879;
+    --color-menu: #15365a;
 }
 
 body {
@@ -50,7 +53,6 @@ nav {
     background-color: var(--color-background);
     margin: 0 20px;
     padding: 20px 40px;
-    flex-wrap: wrap-reverse;
     gap: 5px;
 }
 
@@ -58,12 +60,14 @@ p {
     margin-bottom: 20px;
 }
 
-.flexGapForty {
+.aboutMeDetails {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 40px;
 }
 
-.flexCenter { 
+.flexCenter {
     display: flex;
     align-items: center;
 }
@@ -79,7 +83,38 @@ p {
     background-color: var(--color-button-hover);
 }
 
-.menu {  
+#smallMenu {
+    display: none;
+}
+
+.hamburgerMenu {
+    background-color: var(--color-menu);
+    margin: 0;
+    padding: 0;
+    border-radius: 5px;
+    position: absolute;
+    display: none;
+}
+
+.hamburgerMenu.visible {
+    display: block;
+}
+
+.hamburgerMenuList {
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.hamburgerMenuList:hover {
+    background-color: var(--color-button-hover);
+}
+
+.hamburgerMenuLink {
+    text-decoration: none;
+    color: var(--color-text);
+}
+
+.menu {
     display: flex;
     align-items: center;
     justify-content: end;
@@ -105,12 +140,12 @@ p {
     -moz-transition: color 0.3s ease;
     -o-transition: color 0.3s ease;
     transition: color 0.3s ease;
-    border-bottom: 2px solid #1E88E5;
+    border-bottom: 2px solid #1e88e5;
 }
 
 .menuLink:hover {
-    border-bottom: 2px solid #1E88E5;
-    color: #1E88E5;
+    border-bottom: 2px solid #1e88e5;
+    color: #1e88e5;
 }
 
 .socialLink {
@@ -122,7 +157,7 @@ p {
 }
 
 .socialLink:hover {
-    color: #1E88E5;
+    color: #1e88e5;
 }
 
 .modeButton {
@@ -144,7 +179,7 @@ p {
     align-items: center;
     justify-content: center;
     font-size: 20px;
-    color: #1E88E5;
+    color: #1e88e5;
 }
 
 .section {
@@ -167,7 +202,7 @@ p {
 
 .name {
     font-weight: 900;
-    color: #1E88E5;
+    color: #1e88e5;
 }
 
 .bullets {
@@ -188,11 +223,11 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* height: 300px; */
 }
 
 .boxContainerSkills {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 20px;
@@ -226,6 +261,8 @@ p {
 
 .projectHeader {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 25px;
 }
 
@@ -250,15 +287,14 @@ p {
 
 .boxProjects {
     justify-content: space-between;
-    width: 80%;
     padding: 25px;
 }
 
 .chip {
-    border: 1.5px solid #1E88E5;
+    border: 1.5px solid #1e88e5;
     border-radius: 5px;
     padding: 1px 5px;
-    color: #1E88E5;
+    color: #1e88e5;
     font-size: 12px;
 }
 
